# ulanzi-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  check_manifest.py  homepage.html  pyproject.toml  service_env.txt  session_env.txt
.copilot-temp/: minimal-deck.yaml  small-window-clock-only.yaml  small-window-stats-only.yaml
autostart/: ulanzi-linux-session-agent.desktop
docs/: architecture.md  configuration.md  operations.md  protocol.md  systemd.md  web-ui.md
examples/: deck.example.yaml  deck.multipage.yaml  hello_deck.py
src/ulanzi_linux/: __init__.py
src/ulanzi_linux/application/: __init__.py  action_runner.py  artifacts.py  config_loader.py  config_watcher.py  daemon.py  deck_service.py  predefined_commands.py  session_agent.py
src/ulanzi_linux/domain/: __init__.py  button_config.py  commands.py  device.py  events.py
src/ulanzi_linux/infrastructure/: __init__.py  builtin_icons.py  hid_transport.py  packet.py  small_window_renderer.py  system_metrics.py  ulanzi_d200.py  zip_builder.py
src/ulanzi_linux/interface/: __init__.py  cli.py
src/ulanzi_linux/interface/desktop/: __init__.py  app.py
src/ulanzi_linux/interface/web/: __init__.py  app.py  models.py  server.py
src/ulanzi_linux/interface/web/static/: app.css  app.js  index.html
src/ulanzi_linux/observability/: __init__.py  logging.py
systemd/: install.sh  ulanzi-linux.service
tests/: __init__.py  conftest.py  test_action_runner.py  test_builtin_icons.py  test_config_watcher.py  test_deck_service.py  test_desktop_app.py  test_hid_transport.py  test_hot_reload.py  test_logging.py  test_packet.py  test_pagination.py  test_reconnect.py  test_session_agent.py  test_small_window.py  test_system_metrics.py  test_systemd_unit.py  test_web_app.py  test_zip_builder.py
udev/: 99-ulanzi-d200.rules
